# clustering-in-consensus-space

./: .gitignore  CMakeLists.txt  README.md  setup.py
dataset_comparison/: utils.py
examples/: cpp_example.cpp  example_generalized_homography.cpp  example_generalized_homography_localization.cpp  example_line_segments.cpp  example_multi_homography.ipynb  example_multi_pose_6d.ipynb  example_multi_two_view_motion.ipynb  example_multi_vanishing_point.ipynb  example_pose.cpp
examples/pose_averaging/: openMVG.cpp  openMVG.hpp
src/pyconsensusclustering/: __init__.py
src/pyconsensusclustering/include/: ComputerDeterminanHelper.cpp  clustering.h  dbscan_clustering.h  generalized_essential_estimator.h  generalized_homography_estimator.h  losses.h  mean_shift_clustering.h  median_shift_clustering.h  modified_homography_estimator.h  modified_linear_model_estimator.h  modified_scoring_function.h  modified_solver_homography_four_point.h  progressive_x_prime.cpp  progressive_x_prime.h  pymulticonsensus_python.h  solver_gen_essential_matrix_six_point.h  solver_generalized_homography_three_two_point.h  sturm.h  uniform_generalized_sampler.h
src/pyconsensusclustering/src/: bindings.cpp  pymulticonsensus_python.cpp
src/pymulticonsensus/: __init__.py
src/pymulticonsensus/include/: PEARL.h  brute_force_neighborhood_graph.h  connected_component_sampler.h  mcons_utils.h  modified_fundamental_estimator.h  modified_homography_estimator.h  modified_linear_model_estimator.h  modified_scoring_function.h  modified_solver_fundamental_matrix_seven_point.h  modified_solver_homography_four_point.h  modified_types.h  multi_consensus_fitting.cpp  multi_consensus_fitting.h  pose_utils.h  progressive_x_prime.cpp  progressive_x_prime.h  progx_utils.h  pymulticonsensus_python.h  solver_generalized_homography_ceres.h
src/pymulticonsensus/src/: bindings.cpp  pymulticonsensus_python.cpp
src/pyprogxprime/include/: ComputerDeterminanHelper.h  PEARL.h  brute_force_neighborhood_graph.h  clique_clustering.h  connected_component_sampler.h  distances.h  generalized_homography_estimator.h  losses.h  modified_fundamental_estimator.h  modified_homography_estimator.h  modified_linear_model_estimator.h  modified_solver_fundamental_matrix_seven_point.h  modified_solver_homography_four_point.h  modified_types.h  pose_utils.h  progressive_x_prime.h  progx_utils.h  progxprime_python.h  solver_generalized_essential_matrix_ceres.h  solver_generalized_homography_ceres.h  solver_homography_three_point.h  solver_subspace4.h  subspace4_estimator.h  uniform_generalized_sampler.h
src/pyprogxprime/src/: bindings.cpp  progressive_x_prime.h  progxprime_python.cpp  pyprogxprime_python.cpp
